--- a/preprocessing/mne-report.ipynb
+++ b/preprocessing/mne-report.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sample_audvis_raw.fif...\n",
+      "Opening raw data file /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sample_audvis_raw.fif...\n",
       "    Read a total of 3 projection items:\n",
       "        PCA-v1 (1 x 102)  idle\n",
       "        PCA-v2 (1 x 102)  idle\n",
@@ -107,7 +107,9 @@
     "\n",
     "data_path = sample.data_path()\n",
     "raw_fname = data_path + '/MEG/sample/sample_audvis_raw.fif'\n",
-    "raw = mne.io.read_raw_fif(raw_fname, preload=True)"
+    "raw = mne.io.read_raw_fif(raw_fname, preload=True)\n",
+    "\n",
+    "#preload=true -> load data from disk to memory"
    ]
   },
   {
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -135,18 +137,20 @@
      "output_type": "stream",
      "text": [
       "Overwriting existing file.\n",
-      "Writing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-01_raw.fif\n",
-      "Closing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-01_raw.fif [done]\n",
+      "Writing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-01_raw.fif\n",
+      "Closing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-01_raw.fif [done]\n",
       "Overwriting existing file.\n",
-      "Writing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-02_raw.fif\n",
-      "Closing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-02_raw.fif [done]\n",
+      "Writing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-02_raw.fif\n",
+      "Closing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-02_raw.fif [done]\n",
       "Overwriting existing file.\n",
-      "Writing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-03_raw.fif\n",
-      "Closing /home/mainak/Desktop/projects/github_repos/mne-python/examples/MNE-sample-data/MEG/sample/sub-03_raw.fif [done]\n"
+      "Writing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-03_raw.fif\n",
+      "Closing /home/jovyan/mne_data/MNE-sample-data/MEG/sample/sub-03_raw.fif [done]\n"
      ]
     }
    ],
    "source": [
+    "#copy so don't modify raw instance\n",
+    "\n",
     "raw1 = raw.copy().crop(0, 20)\n",
     "raw2 = raw.copy().crop(20, 40)\n",
     "raw3 = raw.copy().crop(40, 60)\n",
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -178,6 +182,8 @@
    "outputs": [],
    "source": [
     "event_id = {'Auditory/Left': 3, 'Auditory/Right': 4}\n",
+    "\n",
+    "# raw to evoked without preproc\n",
     "\n",
     "def raw_to_evoked(raw_fname, tmin=-0.1, tmax=0.5):\n",
     "    \n",
@@ -193,6 +199,7 @@
     "    fig3 = evoked_l.plot_topomap()\n",
     "    fig4 = evoked_l.plot();\n",
     "    \n",
+    "    # returns 4 figure handles; get list of figs\n",
     "    return [fig1, fig2, fig3, fig4]"
    ]
   },
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -218,7 +225,9 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "figs = raw_to_evoked('sub-01_raw.fif')"
+    "figs = raw_to_evoked('sub-01_raw.fif')\n",
+    "\n",
+    "#capture captures image without changing output"
    ]
   },
   {
@@ -234,64 +243,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embedding : jquery-1.10.2.min.js\n",
-      "Embedding : jquery-ui.min.js\n",
-      "Embedding : bootstrap.min.js\n",
-      "Embedding : jquery-ui.min.css\n",
-      "Embedding : bootstrap.min.css\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rep = Report()"
+    "rep = Report()\n",
+    "#list of figures\n",
+    "#figs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report already exists at location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_raw_to_evoked.html. Overwrite it (y/[n])? y\n",
-      "Saving report to location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_raw_to_evoked.html\n",
-      "Rendering : Table of Contents\n",
-      "custom\n",
-      " ... Raw\n",
-      " ... Epochs\n",
-      " ... Topomap\n",
-      " ... Butterfly\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_raw_to_evoked.html'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#give each fig caption\n",
     "captions = ['Raw', 'Epochs', 'Topomap', 'Butterfly']\n",
     "rep.add_figs_to_section(figs, captions=captions)\n",
     "rep.save('report_raw_to_evoked.html')"
@@ -321,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -362,23 +337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=3)]: Using backend LokyBackend with 3 concurrent workers.\n",
-      "[Parallel(n_jobs=3)]: Done   3 out of   3 | elapsed:    0.6s remaining:    0.0s\n",
-      "[Parallel(n_jobs=3)]: Done   3 out of   3 | elapsed:    0.6s finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def raw_to_evoked(raw_fname, tmin=-0.1, tmax=0.5):\n",
     "    raw = mne.io.read_raw_fif(data_path + '/MEG/sample/' + raw_fname, preload=True)\n",
@@ -389,6 +354,7 @@
     "\n",
     "from mne.parallel import parallel_func\n",
     "\n",
+    "#iterate over filenames to run script in parallel\n",
     "fnames = ['sub-01_raw.fif', 'sub-02_raw.fif', 'sub-03_raw.fif']\n",
     "parallel, myfunc, _ = parallel_func(raw_to_evoked, n_jobs=3)\n",
     "parallel(myfunc(fname) for fname in fnames);"
@@ -419,46 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embedding : jquery-1.10.2.min.js\n",
-      "Embedding : jquery-ui.min.js\n",
-      "Embedding : bootstrap.min.js\n",
-      "Embedding : jquery-ui.min.css\n",
-      "Embedding : bootstrap.min.css\n",
-      "Report already exists at location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_bem.html. Overwrite it (y/[n])? y\n",
-      "Saving report to location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_bem.html\n",
-      "Rendering : Table of Contents\n",
-      "bem\n",
-      " ... BEM\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_bem.html'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subjects_dir = data_path + '/subjects'\n",
     "\n",
     "rep = Report()\n",
     "rep.add_bem_to_section(subject='sample', subjects_dir=subjects_dir, decim=36)\n",
-    "rep.save('report_bem.html')"
+    "rep.save('report_bem.html')\n",
+    "\n",
+    "#inspect whether freesurfer segmentation looks good"
    ]
   },
   {
@@ -497,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -516,43 +457,20 @@
     "       <td> %0.2f </td>\n",
     "   </tr>\n",
     "</table>\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "#see 26"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving report to location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_bem.html\n",
-      "Rendering : Table of Contents\n",
-      "custom\n",
-      " ... Raw\n",
-      " ... Epochs\n",
-      " ... Topomap\n",
-      " ... Butterfly\n",
-      " ... Info table\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_bem.html'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rep.add_htmls_to_section(html % (raw.times[0], raw.times[-1], raw.info['sfreq']), captions='Info table')\n",
     "rep.save('report_bem.html', overwrite=True)"
@@ -594,39 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embedding : jquery-1.10.2.min.js\n",
-      "Embedding : jquery-ui.min.js\n",
-      "Embedding : bootstrap.min.js\n",
-      "Embedding : jquery-ui.min.css\n",
-      "Embedding : bootstrap.min.css\n",
-      "Saving report to location /home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_slider.html\n",
-      "Rendering : Table of Contents\n",
-      "Evoked Response\n",
-      " ... Evoked Response\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/home/mainak/Desktop/projects/mne-workshop-brown/content/preprocessing/report_slider.html'"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "fname = data_path + '/MEG/sample/sample_audvis-ave.fif'\n",
@@ -636,6 +528,8 @@
     "rep = Report()\n",
     "figs = list()\n",
     "times = evoked.times[::4]\n",
+    "\n",
+    "#add fig handles to report\n",
     "for time in times:\n",
     "    figs.append(evoked.plot_topomap(time, vmin=-300, vmax=300,\n",
     "                                    res=100, show=False))\n",
@@ -683,6 +577,13 @@
     "- sliders to browse through the raw data<br/>\n",
     "</details>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -702,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   },
   "livereveal": {
    "scroll": true
